--- a/css/styles.css
+++ b/css/styles.css
@@ -506,7 +506,7 @@ li .cont-exp {
 
 .subscribe-footer {
   display: flex;
-  align-items: baseline;
+  align-items: flex-end;
   gap: 24px;
 }
 
@@ -525,4 +525,15 @@ li .cont-exp {
   width: 264px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: transparent;
+  color: #fff;
+}
+
+.subscribe-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding-left: 16px;
 }
