--- a/css/styles.css
+++ b/css/styles.css
@@ -648,12 +648,13 @@ li .cont-exp {
   width: 100%;
   height: 40px;
   padding-left: 38px;
-  outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
-  border: 1px solid #4d5ae5;
+  border-color: #4d5ae5;
 }
 
 .modal-input:focus + .svg-input {
@@ -742,4 +743,5 @@ li .cont-exp {
   background-color: #4d5ae5;
   border: none;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
