--- a/css/styles.css
+++ b/css/styles.css
@@ -529,9 +529,6 @@ li .cont-exp {
   background: transparent;
   outline: none;
   color: #fff;
-}
-
-.subscribe-input::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
@@ -539,6 +536,15 @@ li .cont-exp {
   color: #fff;
   padding-left: 16px;
 }
+
+/* .subscribe-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding-left: 16px;
+} */
 
 .modal-overlay {
   position: fixed;
@@ -675,17 +681,28 @@ li .cont-exp {
   width: 100%;
   height: 120px;
   resize: none;
-  padding-top: 8px;
-  padding-left: 16px;
+  padding: 8px 16px;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
 }
 
-.modal-textarea::placeholder {
+.modal-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+/* .modal-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-}
+} */
 
 .checkbox-cont {
   margin-bottom: 24px;
