--- a/css/styles.css
+++ b/css/styles.css
@@ -682,6 +682,14 @@ li .cont-exp {
   color: rgba(46, 47, 66, 0.4);
 }
 
+.modal-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
 .modal-textarea:focus {
   border-color: #4d5ae5;
 }
